--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "@types/react": "16.9.41",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "7.1.9",
+    "axios": "^0.19.2",
     "react": "16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "7.2.0",
     "react-scripts": "3.4.1",
     "redux": "4.0.5",
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.3.0",
     "typesafe-actions": "5.1.0",
-    "typescript": "~3.7.2"
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
